--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,17 @@
   font-style: normal;
 }
 
+.skip-links a {
+  padding: .5em .75em;
+  position: absolute;
+  top: -3em;
+  background-color: #000;
+  color: #fff;
+  font-size: 1.125em;
+  font-weight: bold;
+  text-decoration: none;
+}
+
 a {
   text-decoration: none;
   color: #58a4b0;
