--- a/_includes/cards.html
+++ b/_includes/cards.html
@@ -1,4 +1,4 @@
-<div class="grid push-2" id="project-cards" role="main">
+<div class="grid push-2" role="main" id="main" tabindex="0">
 
   <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
     <div class="card-image island-1-2">
