--- a/_includes/cards.html
+++ b/_includes/cards.html
@@ -1,8 +1,8 @@
 <div class="grid push-2" role="main" id="main" tabindex="0">
 
-  <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
+  <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2" >
     <div class="card-image island-1-2">
-      <a href="{{site.baseurl}}/event-branding" aria-label="This card links to the event branding page" alt="Event Branding Page">
+      <a href="{{site.baseurl}}/event-branding" aria-label="This card links to the event branding page" alt="Event Branding Page" id="event-branding" tabindex="0">
         <div class="push-1-2">
           <img class="img-flex" src="{{site.baseurl}}/images/event-branding-icon.svg" aria-details="#Illustration-icon-of-branding-event" alt="event-branding"></img>
         </div>
@@ -16,7 +16,7 @@
 
   <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
     <div class="card-image island-1-2">
-      <a href="{{site.baseurl}}/project-logo" alt="Logo Re-design Page">
+      <a href="{{site.baseurl}}/project-logo" aria-label="This card links to the logo re-design page" alt="Logo Re-design Page" id="logo-design" tabindex="0">
         <div class="push-1-2">
           <img class="img-flex" src="{{site.baseurl}}/images/eskan-logo.svg" alt="Logo Redesign"></img>
         </div>
@@ -29,7 +29,7 @@
   </div>
 
   <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
-    <a href="{{site.baseurl}}/project" alt="New project page">
+    <a href="{{site.baseurl}}/project" aria-label="This card links to the illustration page" alt="Illustration" id="illustions" tabindex="0">
       <div class="card-image island-1-2">
         <div class="push-1-2">
           <img class="img-flex" src="{{site.baseurl}}/images/laptop.svg" alt="card"></img>
