--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,9 @@
   <title>{{page.title}}</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="{{page.meta}}">
+  <meta name="theme-color" content="#ffffff">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link href="{{site.baseurl}}/css/site.css" rel="stylesheet">
 </head>
 <body>
