--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,19 +17,19 @@
            <h2 class="tera push-1-4" aria-label="How to content krystyna">Contact</h2>
            <a class="milli" itemprop="email" href="mailto:hey@krystynamacleod.design">hey@krystynamacleod.design</a>
 
-          <div class="">
+          <div class="island">
             <ul class="list-group-inline">
-              <li>
+              <li class="gutter">
                 <i class="icon i-48 pad-b-1-4">
                   <a aria-label="Link to instagram" href="https://www.instagram.com/k.macleod.design/"><img class="img-flex" src="{{site.baseurl}}/images/instagram-icon.svg" alt="instagram"></img></a>
                 </i>
               </li>
-              <li>
+              <li class="gutter">
                 <i class="icon i-48 pad-b-1-4">
                   <a aria-label="Link to Linkedin" href="https://www.linkedin.com/in/krystyna-macleod-042417173/"><img class="img-flex" src="{{site.baseurl}}/images/linkden-icon.svg" alt="Linkedin"></img></a>
                 </i>
               </li>
-              <li>
+              <li class="gutter">
                 <i class="icon i-48 pad-b-1-4">
                   <a aria-label="Link to Behance" href="https://www.behance.net/krystynamacleod"><img class="img-flex" src="{{site.baseurl}}/images/behance-icon.svg" alt="Behance"></img></a>
                 </i>
