--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,7 +17,7 @@
 
          <div class="unit s-1 m-1 l-2-3 island-1-4 content-fill content-shrink">
            <h2 class="tera push-1-4" aria-label="How to content krystyna">Contact</h2>
-           <a class="milli" itemprop="email" href="mailto:hey@krystynamacleod.design">hey@krystynamacleod.design</a>
+           <a class="milli push-1-2" itemprop="email" href="mailto:hey@krystynamacleod.design">hey@krystynamacleod.design</a>
 
           <div>
             <ul class="list-group-inline">
