--- a/_includes/about.html
+++ b/_includes/about.html
@@ -19,7 +19,7 @@
            <h2 class="tera push-1-4" aria-label="How to content krystyna">Contact</h2>
            <a class="milli push-1-2" itemprop="email" href="mailto:hey@krystynamacleod.design">hey@krystynamacleod.design</a>
 
-          <div>
+          <div class="pad-t">
             <ul class="list-group-inline">
               <li class="gutter-1-8">
                 <i class="icon i-48 pad-b-1-4">
